overrides/stylesheets/extra.css
/* Color Settings */
/* https://github.com/squidfunk/mkdocs-material/blob/6b5035f5580f97532d664e3d1babf5f320e88ee9/src/assets/stylesheets/main/_colors.scss */
/* https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#custom-colors */
:root > * {
  --md-primary-fg-color: #ffffff;
  --md-primary-bg-color: #1d1d20;

  --md-default-fg-color: #1d1d20;
  --md-default-bg-color: #ffffff;

  --md-code-fg-color: #1d1d20;
  --md-code-bg-color: #f5f5f5;

  --md-accent-fg-color: #999;

  --md-admonition-fg-color: #1d1d20;

  --md-typeset-color: #1d1d20;
  --md-typeset-a-color: #349890;

  --md-typeset-btn-color: #55aea6;
  --md-typeset-btn-hover-color: #52bbb1;

  --md-admonition-icon--pythontutor: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19.14 7.5A2.86 2.86 0 0 1 22 10.36v3.78A2.86 2.86 0 0 1 19.14 17H12c0 .39.32.96.71.96H17v1.68a2.86 2.86 0 0 1-2.86 2.86H9.86A2.86 2.86 0 0 1 7 19.64v-3.75a2.85 2.85 0 0 1 2.86-2.85h5.25a2.85 2.85 0 0 0 2.85-2.86V7.5h1.18m-4.28 11.79c-.4 0-.72.3-.72.89 0 .59.32.71.72.71a.71.71 0 0 0 .71-.71c0-.59-.32-.89-.71-.89m-10-1.79A2.86 2.86 0 0 1 2 14.64v-3.78A2.86 2.86 0 0 1 4.86 8H12c0-.39-.32-.96-.71-.96H7V5.36A2.86 2.86 0 0 1 9.86 2.5h4.28A2.86 2.86 0 0 1 17 5.36v3.75a2.85 2.85 0 0 1-2.86 2.85H8.89a2.85 2.85 0 0 0-2.85 2.86v2.68H4.86M9.14 5.71c.4 0 .72-.3.72-.89 0-.59-.32-.71-.72-.71-.39 0-.71.12-.71.71s.32.89.71.89Z"/></svg>');
  --md-admonition-pythontutor-color: #eee;
}

[data-md-color-scheme="slate"] {
  --md-primary-fg-color: #22272e;
  --md-primary-bg-color: #adbac7;

  --md-default-fg-color: #adbac7;
  --md-default-bg-color: #22272e;

  --md-code-fg-color: #adbac7;
  --md-code-bg-color: #1d2126;

  --md-accent-fg-color: #aaa;

  --md-admonition-fg-color: #adbac7;

  --md-footer-fg-color: #adbac7;

  --md-typeset-color: #adbac7;
  --md-typeset-a-color: #52bbb1 !important;

  --md-typeset-btn-color: #52bbb1;
  --md-typeset-btn-hover-color: #55aea6;

  --md-admonition-pythontutor-color: #30363f;
}

/* https://github.com/squidfunk/mkdocs-material/issues/4832#issuecomment-1374891676 */
.md-nav__link[for] {
  color: var(--md-default-fg-color) !important;
}

/* Figure class */
.animation-figure {
  border-radius: 0.63rem;
  display: block;
  margin: 0 auto;
  box-shadow: var(--md-shadow-z2);
}

/* Cover image class */
.cover-image {
  width: 28rem;
  height: auto;
  border-radius: 0.3rem;
  display: block;
  margin: 0 auto;
  box-shadow: var(--md-shadow-z2);
}

/* Center Markdown Tables (requires md_in_html extension) */
.center-table {
  text-align: center;
}

/* Reset alignment for table cells */
.md-typeset .center-table :is(td, th):not([align]) {
  text-align: initial;
}

/* Font size */
.md-typeset {
  font-size: 0.75rem;
  line-height: 1.5;
}

.md-typeset pre {
  font-size: 0.95em;
}

/* Markdown Header */
/* https://github.com/squidfunk/mkdocs-material/blob/dcab57dd1cced4b77875c1aa1b53467c62709d31/src/assets/stylesheets/main/_typeset.scss */
.md-typeset h1 {
  font-weight: 400;
  color: var(--md-default-fg-color);
}

.md-typeset h2 {
  font-weight: 400;
}

.md-typeset h3 {
  font-weight: 500;
}

.md-typeset h5 {
  text-transform: none;
}

.md-typeset a:hover {
  color: var(--md-typeset-a-color);
  text-decoration: underline;
}

.md-typeset code {
  border-radius: 0.2rem;
}

.highlight span.filename {
  font-weight: normal;
}

/* font-family setting for Win10 */
body {
  --md-text-font-family: -apple-system, BlinkMacSystemFont,
    var(--md-text-font, _), Helvetica, Arial, sans-serif;
  --md-code-font-family: var(--md-code-font, _), SFMono-Regular, Consolas, Menlo,
    -apple-system, BlinkMacSystemFont, var(--md-text-font, _), monospace;
}

/* max height of code block */
/* https://github.com/squidfunk/mkdocs-material/issues/3444 */
.md-typeset pre > code {
  max-height: 25rem;
}

/* Make the picture not glare in dark theme */
[data-md-color-scheme="slate"] .md-typeset img,
[data-md-color-scheme="slate"] .md-typeset svg,
[data-md-color-scheme="slate"] .md-typeset video {
  filter: brightness(0.85) invert(0.05);
}

/* landing page */
.header-img-div {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  width: 100%; /* Default to full width */
}

/* Admonition for python tutor */
.md-typeset .admonition.pythontutor,
.md-typeset details.pythontutor {
  border-color: var(--md-default-fg-color--lightest);
  margin-top: 0;
  margin-bottom: 1.5625em;
}

.md-typeset .admonition:focus-within,
.md-typeset details:focus-within {
  box-shadow: var(--md-shadow-z1);
}

.md-typeset .pythontutor > .admonition-title,
.md-typeset .pythontutor > summary {
  background-color: var(--md-code-bg-color);
}
.md-typeset .pythontutor > .admonition-title::before,
.md-typeset .pythontutor > summary::before {
  background-color: rgb(55, 118, 171);
  -webkit-mask-image: var(--md-admonition-icon--pythontutor);
  mask-image: var(--md-admonition-icon--pythontutor);
}

.md-typeset .admonition-title:before,
.md-typeset summary:before {
  width: 1.25em;
}

.pythontutor-iframe {
  width: 125%;
  height: 125%;
  max-width: 125% !important;
  max-height: 125% !important;
  transform: scale(0.8);
  transform-origin: top left;
  border: none;
}

/* landing page container */
.home-div {
  width: 100%;
  height: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--md-default-bg-color);
  color: var(--md-default-fg-color);
  font-size: 0.9rem;
  padding: 2em;
  text-align: center;
}

.section-content {
  width: 100%;
  height: auto;
  max-width: 70vw;
}

/* rounded button */
.rounded-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border-radius: 10em;
  margin: 0 0.1em;
  padding: 0.5em 1.3em;
  border: none;
  background-color: var(--md-typeset-btn-color);
  color: var(--md-primary-fg-color) !important;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
}

.rounded-button:hover {
  background-color: var(--md-typeset-btn-hover-color);
}

.rounded-button p {
  margin: 0;
  margin-bottom: 0.1em;
}

.rounded-button svg {
  fill: var(--md-primary-fg-color);
  width: auto;
  height: 1.2em;
  margin-right: 0.5em;
}

/* text button */
.text-button-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  height: auto;
  margin: 0 auto;
}

.text-button {
  display: flex;
  flex-direction: row;
  align-items: center;
  color: var(--md-typeset-btn-color);
  text-decoration: none;
  margin: 0 1em;
}

.text-button:hover {
  text-decoration: underline;
}

.text-button svg {
  display: inline-block;
  fill: var(--md-typeset-btn-color);
  width: auto;
  height: 0.9em;
  background-size: cover;
  padding-top: 0.17em;
  margin-left: 0.4em;
}

/* hero image */
.hero-image-div {
  height: min(84vh, 75vw);
  width: min(112vh, 100vw);
  margin: 0 auto;
  margin-top: -2.4rem;
  padding: 0;
  position: relative;
  color: white;
  font-size: min(2vh, 2.5vw);
  font-weight: 500;
}

.hero-bg {
  height: 100%;
  width: 100%;
  object-fit: cover;
  position: absolute;
}

/* hover on the planets */
.hero-on-hover {
  width: auto;
  position: absolute;
  transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
}

.hero-caption {
  margin: 0;
  position: absolute;
  transform: translateX(-50%) translateY(-50%);
  white-space: nowrap; /* prevent line breaks */
}

a:hover .hero-on-hover {
  filter: brightness(1.15) saturate(1.1)
    drop-shadow(0 0 0.5rem rgba(255, 255, 255, 0.2));
  transform: scale(1.03);
}

a:hover .hero-caption {
  text-decoration: underline;
  color: var(--md-typeset-btn-color);
}

/* code badge */
.code-badge {
  width: 100%;
  height: auto;
  margin: 0 auto;
}

.code-badge img {
  height: 1.07em;
  width: auto;
}

/* device */
.device-on-hover {
  width: auto;
  position: absolute;
  transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
}

.device-on-hover:hover {
  filter: drop-shadow(0 0 0.2rem rgba(0, 0, 0, 0.15));
  transform: scale(1.03);
}

/* brief intro */
.intro-container {
  display: flex;
  align-items: center;
  margin: 2em auto;
}

.intro-image {
  flex-shrink: 0;
  flex-grow: 0;
  width: 55%;
  border-radius: 0.5em;
  box-shadow: var(--md-shadow-z2);
}

.intro-text {
  flex-grow: 1; /* fill the space */
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: left;
  align-items: flex-start;
  width: fit-content;
  margin: 2em;
}

.intro-text > div {
  align-self: flex-start;
  width: auto;
  margin: 0 auto;
}

.endor-text {
  width: 50%;
}

.intro-quote {
  color: var(--md-accent-fg-color);
  font-weight: bold;
}

/* contributors table */
.profile-div {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 720px;
  margin: 1em auto;
}

.profile-cell {
  flex: 1; /* even distribution */
  flex-basis: 15%;
  margin: 1em 0.5em;
  text-align: center;
}

.profile-img {
  width: 5em;
  border-radius: 50%;
  margin-bottom: 0.5em;
}

.giscus-container {
  width: 50em;
  max-width: 100%;
  margin: 0 auto;
}

/* Hide table of contents */
@media screen and (max-width: 60em) {
  .home-div {
    font-size: 0.75rem;
  }
}

/* Hide navigation */
@media screen and (max-width: 76.25em) {
  .section-content {
    max-width: 95vw;
  }

  .intro-container {
    flex-direction: column;
  }

  .intro-text {
    width: auto;
    order: 2;
    margin: 0 auto;
  }

  .endor-text {
    width: auto;
    margin: 0 auto;
  }

  .intro-image {
    width: 100%;
    order: 1;
    margin-bottom: 1em;
  }

  .contrib-image {
    width: 100%;
  }

  .profile-div {
    max-width: 500px;
  }
  .profile-cell {
    flex-basis: 25%;
  }
}

